--- a/datafundament_fb/locations/templates/locations/propertygroup-list.html
+++ b/datafundament_fb/locations/templates/locations/propertygroup-list.html
@@ -37,7 +37,7 @@
         </tbody>
     </table>
     <div class="btn-container">
-        <a href="{% url 'locations_urls:propertygroup-create' %}" class="btn btn-secundair">Aanmaken</a>
+        <a href="{% url 'locations_urls:propertygroup-create' %}" class="btn btn-secundair">Toevoegen</a>
     </div>
 </div>
 {% endblock %}
