--- a/datafundament_fb/locations/templates/locations/propertyoption-create.html
+++ b/datafundament_fb/locations/templates/locations/propertyoption-create.html
@@ -2,7 +2,7 @@
 {% load i18n static utils %}
 
 {% block title %}
-| {{ location_property.label }} optie aanmaken
+| {{ location_property.label }} optie toevoegen
 {% endblock %}
 
 {% block extra-breadcrumbs %}
@@ -34,7 +34,7 @@ Toevoegen
     </div>
     {% endfor %}
     <div class="btn-container">
-        <button class="btn btn-primair" type="submit" name="_save" value="Save" formaction="{% url 'locations_urls:propertyoption-create' location_property.id  %}">Aanmaken</button>
+        <button class="btn btn-primair" type="submit" name="_save" value="Save" formaction="{% url 'locations_urls:propertyoption-create' location_property.id  %}">Toevoegen</button>
         <a href="{% url 'locations_urls:propertyoption-list' location_property.id %}" class="btn btn-secundair">Annuleren</a>
     </div>
 </form>
