--- a/datafundament_fb/locations/templates/locations/propertyoption-list.html
+++ b/datafundament_fb/locations/templates/locations/propertyoption-list.html
@@ -35,7 +35,7 @@ Keuze opties
         </tbody>
     </table>
     <div class="btn-container">
-        <a href="{% url 'locations_urls:propertyoption-create' location_property.id %}" class="btn btn-primair">Aanmaken</a>
+        <a href="{% url 'locations_urls:propertyoption-create' location_property.id %}" class="btn btn-primair">Toevoegen</a>
         <a href="{% url 'locations_urls:locationproperty-update' location_property.id %}" class="btn btn-secundair">Terug</a>
     </div>
 </div>
