--- a/datafundament_fb/locations/templates/locations/externalservice-list.html
+++ b/datafundament_fb/locations/templates/locations/externalservice-list.html
@@ -41,7 +41,7 @@
         </tbody>
     </table>
     <div class="btn-container">
-        <a href="{% url 'locations_urls:externalservice-create' %}" class="btn btn-secundair">Aanmaken</a>
+        <a href="{% url 'locations_urls:externalservice-create' %}" class="btn btn-secundair">Toevoegen</a>
     </div>
 </div>
 {% endblock %}
