--- a/datafundament_fb/locations/templates/locations/locationproperty-list.html
+++ b/datafundament_fb/locations/templates/locations/locationproperty-list.html
@@ -49,7 +49,7 @@
         </tbody>
     </table>
     <div class="btn-container">
-        <a href="{% url 'locations_urls:locationproperty-create' %}" class="btn btn-secundair">Aanmaken</a>
+        <a href="{% url 'locations_urls:locationproperty-create' %}" class="btn btn-secundair">Toevoegen</a>
     </div>
 </div>
 {% endblock %}
