--- a/datafundament_fb/locations/templates/locations/externalservice-list.html
+++ b/datafundament_fb/locations/templates/locations/externalservice-list.html
@@ -1,8 +1,17 @@
-{% extends 'locations/generic-list.html' %}
-{% load i18n static admin_urls admin_modify %}
+{% extends 'site-base.html' %}
+{% load i18n static utils %}
+
+{% block title %}
+| {{ model|verbose_name:'plural' }}
+{% endblock %}
+
+{% block extra-breadcrumbs %}
+<span>&rsaquo;</span>
+{{ model|verbose_name:'plural' }}
+{% endblock %}
 
 {% block content %}
-{{ block.super }}
+<h2>{{ model|verbose_name:'plural' }}</h2>
 <div class="page-content">
     <table class="table-adam">
         <thead>
@@ -19,7 +28,7 @@
                     {{ object.order }}
                 </td>
                 <td>
-                    <a href="{% url 'externalservice-update' object.id %}">
+                    <a href="{% url 'locations_urls:externalservice-update' object.id %}">
                     {{object.name}}
                     </a>
                 </td>
@@ -32,7 +41,7 @@
         </tbody>
     </table>
     <div class="btn-container">
-        <a href="{% url 'externalservice-create' %}" class="btn btn-secundair">Aanmaken</a>
+        <a href="{% url 'locations_urls:externalservice-create' %}" class="btn btn-secundair">Toevoegen</a>
     </div>
 </div>
 {% endblock %}
