fix generic delete template

--- a/datafundament_fb/locations/templates/locations/generic-delete.html
+++ b/datafundament_fb/locations/templates/locations/generic-delete.html
@@ -2,7 +2,7 @@
 {% load i18n static utils %}
 
 {% block title %}
-| {{ model|verbose_name:'plural' }} verwijderen
+| {{ object|verbose_name:'plural' }} verwijderen
 {% endblock %}
 
 {% block extra-breadcrumbs %}
