--- a/datafundament_fb/locations/templates/locations/location-log.html
+++ b/datafundament_fb/locations/templates/locations/location-log.html
@@ -65,6 +65,9 @@ Logs
             {% endfor %}
         </tbody>
     </table>
+    {% if is_paginated %}
+    {% include "includes/pagination.html" %}
+    {% endif %}
 </div>
 <div class="btn-container">
     {% if location %}
