--- a/datafundament_fb/locations/templates/locations/location-log.html
+++ b/datafundament_fb/locations/templates/locations/location-log.html
@@ -32,7 +32,9 @@ Logs
             <tr>
                 <th scope="col" class="column-pancode">Datum/tijd</th>
                 <th scope="col">Door</th>
-                <th scope="col">Onderdeel</th>
+                <th scope="col">Wat</th>
+                <th scope="col">Naam</th>
+                <th scope="col">Veld</th>
                 <th scope="col">Log bericht</th>
             </tr>
         </thead>
@@ -46,7 +48,13 @@ Logs
                     {{ object.user }}
                 </td>
                 <td>
-                    {{ object.target }}
+                    {{ object.content_type.name }}
+                </td>
+                <td>
+                    {{ object.object_name }}
+                </td>
+                <td>
+                    {{ object.field }}
                 </td>
                 <td>
                     {{ object.message }}
@@ -57,6 +65,9 @@ Logs
             {% endfor %}
         </tbody>
     </table>
+    {% if is_paginated %}
+    {% include "includes/pagination.html" %}
+    {% endif %}
 </div>
 <div class="btn-container">
     {% if location %}
