--- a/datafundament_fb/templates/site-base.html
+++ b/datafundament_fb/templates/site-base.html
@@ -5,7 +5,7 @@
 <html lang="{{ LANGUAGE_CODE|default:" en-us" }}" dir="{{ LANGUAGE_BIDI|yesno:'rtl,ltr,auto' }}">
 
 <head>
-  <title>Datfundament Facilitair Beheer{% block title %}{% endblock %}</title>
+  <title>Datafundament Facilitair Beheer{% block title %}{% endblock %}</title>
   {% block extrastyle %}
   <link rel="stylesheet" href="{% static 'admin/css/base.css' %}">
   <link rel="stylesheet" href="{% static 'css/ggd_base.css' %}">
