--- a/src/templates/site-base.html
+++ b/src/templates/site-base.html
@@ -6,6 +6,7 @@
 
 <head>
   <title>Datafundament Facilitair Beheer{% block title %}{% endblock %}</title>
+  <link rel="icon" href="{% static 'images/favicon.ico' %}" />
   {% block extrastyle %}
   <link rel="stylesheet" href="{% static 'admin/css/base.css' %}">
   <link rel="stylesheet" href="{% static 'css/ggd_base.css' %}">
