Change Datafundament text to FB Locatielijst

--- a/src/templates/site-base.html
+++ b/src/templates/site-base.html
@@ -5,7 +5,7 @@
 <html lang="{{ LANGUAGE_CODE|default:" en-us" }}" dir="{{ LANGUAGE_BIDI|yesno:'rtl,ltr,auto' }}">
 
 <head>
-  <title>Datafundament Facilitair Beheer{% block title %}{% endblock %}</title>
+  <title>FB Locatielijst{% block title %}{% endblock %}</title>
   <link rel="icon" href="{% static 'images/favicon.ico' %}" />
   {% block extrastyle %}
   <link rel="stylesheet" href="{% static 'admin/css/base.css' %}">
@@ -38,7 +38,7 @@
               <img src="{% static 'images/logo-gemeente-amsterdam-small.svg' %}" class="site-logo-small"
                 alt="Logo Gemeente Amsterdam" />
             </div>
-            <div id="site-name">Datafundament Facilitair Bureau</div>
+            <div id="site-name">FB Locatielijst</div>
           </a>
         </h1>
         {% endblock %}
